Move mkdocs-walt to mkdocs

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -5,7 +5,7 @@ on:
   push:
     paths:
       - "examples/mkdocs/**"
-      - "mkdocs-walt/setup.py"
+      - "mkdocs/setup.py"
     branches:
       - main
   workflow_dispatch:
